ajout de la partie 3

--- a/partie2/exercice 7/index7css.html
+++ b/partie2/exercice 7/index7css.html
@@ -6,7 +6,7 @@
     <title>ex 7</title>
 </head>
 <body>
-    <p><span>Voici le 1er paragraphe</span></p> 
-    <p>Voici le 2eme </p>
+    <p>Voici le 1er paragraphe</p> 
+    <p2>Voici le 2eme </p2>
 </body>
 </html>
