--- a/partie2/exercice 9/index9.html
+++ b/partie2/exercice 9/index9.html
@@ -5,37 +5,37 @@
     <title>ex 9 </title>
     <link rel="stylesheet" href="assets/css/style9css.css">
 </head>
-<body> <form>
-    <fieldset id="div1">
-      <legend id="div1" > Votre identité</legend> 
-    <ol>
-       <li> Nom: <input type="nom" placeholder="Nom"></li>
-        <li> Prénom: <input type="Prénom" placeholder= Prénom></li>
-        <li> Adresse mail: <input type="Adresse mail" placeholder="Adresse mail"> </li>
-    </ol>
-    </div></fieldset>
-     <fieldset id="div2">
-      <legend id="div2"> Adresse de livraison</legend> 
-      <ol>
-          <li> adresse: <input id="adr"> </li>
-          <li>Code postal: <input type="Code postal" placeholder="Code postal"></li>
-          <li>Ville: <input type="Ville" placeholder="Ville"></li>
-      </ol>
-    
-    </div></fieldset>
-   <fieldset div id="div3">
-    <legend id="div3"> Information de réglement</legend>
-    <ol>
-        <li>Type de carte bancaire:
-             <ul><input type="radio"> VISA</ul> 
-             <ul><input type="radio"> MASTER CARD</ul> </li> 
-        <li>Numéro de carte:  <input type="text" placeholder="Numéro de carte "> </li>
-        <li>Code de sécurité: <input type="text" placeholder="Code de sécurité"> </li>
-        <li>Nom du titulaire: <input type="text" placeholder="nom  du titulaire"> </li>
-    </ol>
-    </fieldset> </div>
-
-    <div><input type="button" value="J'achète "></div>
- </form>
+<body> 
+   <form action="traitement.php" method="post"></form>
+      <fieldset class="blue" > 
+       <legend>Votre identité</legend> 
+         <div class="space space2 blue"> 
+               <label for="name">1.Nom: </label> <input type="text" name="name" id="name" placeholder="Nom">
+               <label for="Prenom">2.Prénom: </label> <input type="text" name="Prenom" id="Prenom" placeholder="Prénom">
+               <label for="adress">3.Adresse mail: </label> <input type="text" name="adress" id="" placeholder="Adresse mail">
+         </div>
+      </fieldset>   
+      <fieldset class="purple"> 
+         <legend>Adresse de livraison</legend> 
+           <div class="space space2 purple">
+                 <label for="adresse">1.Adresse: </label> <textarea name="adress" id="adress" cols="30" rows="10"></textarea>
+                 <label for="code postal">2.Code postal: </label> <input type="text" name="code postal" id="code postal" placeholder="Code postal">
+                 <label for="Ville">3.Ville: </label> <input type="text" name="Ville" id="" placeholder=" Ville">
+           </div>
+        </fieldset>
+        <fieldset class="red"> 
+         <legend>Information de réglement </legend> 
+           <div class="space space2 red">
+                 <label for="type carte">1.Type de carte bancaire:</label>
+                     <div class="marge">
+                     <input type="radio" name="name card" id="type carte" >Visa 
+                     <input type="radio" name="name card" id="type de carte">Mastercard
+                     </div> 
+                 <label for="carte">2.Numéro de carte: </label> <input type="text" name="carte" id="carte" placeholder="Numéro de carte">
+                 <label for="code securité">3.Code de sécurité: </label> <input type="text" name="code securité" id="code securité" placeholder=" Code securité ">
+                 <label for="Nom du titulaire">4.Nom du titulaire: </label> <input type="text"name="Nom" id="Nom" placeholder="Nom du titulaire">
+           </div>
+        </fieldset>
+        <input type="button" value="J'achète !">
 </body>
 </html>
